# RE-Unpacker

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  SECURITY.md  SETUP_GUIDE.md  TROUBLESHOOTING_GUIDE.md  USAGE_GUIDE.md  pyproject.toml  re-unpacker  re-unpacker.cmd  re-unpacker.ps1
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
src/re_unpacker/: __init__.py  __main__.py  cli.py  constants.py  detection.py  exceptions.py  logging_setup.py  manifest.py  manual_install_windows.py  orchestrator.py  pkg_manager.py  platform_compat.py  reporting.py  safety.py  subprocess_utils.py  tools.py
src/re_unpacker/classifiers/: __init__.py  base.py  entropy.py  exif.py  fuzzy_hash.py  yara_match.py
src/re_unpacker/extractors/: __init__.py  android.py  archive.py  base.py  binwalk.py  cab.py  cpio_ar.py  deb.py  disk_image.py  embedded_fs.py  encrypted.py  forensic_fs.py  iso.py  legacy.py  lzip_family.py  msi.py  pdf.py  pe_installer.py  resources.py  rpm.py  squashfs.py  upx.py
src/re_unpacker/verifiers/: __init__.py  apk.py  base.py  deb.py  gpg.py  pe.py  rpm.py  windows_authenticode.py
tests/: conftest.py  test_cli.py  test_constants.py  test_detection.py  test_docs_consistency.py  test_end_to_end.py  test_exceptions.py  test_headers.py  test_registries.py  test_regressions.py  test_remediations.py  test_safety.py
