# =============================================================================
# re-unpacker -- build system & project metadata
#
# Synopsis
#   PEP 517 / PEP 621 project definition. Enables `pip install -e .` from the
#   project root, which puts a `re-unpacker` entry-point script on PATH.
#
# Description
#   This project is Python-stdlib only -- no runtime dependencies. Extraction
#   is performed via external system binaries (dpkg-deb, 7z, cabextract, …)
#   which are out of scope for pip; see README.md for the `apt-get install`
#   one-liner.
#
# Notes
#   - Minimum Python: 3.10 (uses PEP 604 union types, frozenset type hints).
#   - The bundled bash wrapper `re-unpacker` remains available for people
#     who clone and run without installing.
#
# Execution parameters
#   # Editable install for development:
#   pip install -e .
#   # Regular install from a clone:
#   pip install .
#   # Build wheel / sdist:
#   python -m build
#
# Version
#   0.3.2
# =============================================================================

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "re-unpacker"
version = "0.4.8"
description = "Recursive package / installer / archive / binary extractor for RE triage"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
keywords = [
    "reverse-engineering",
    "extraction",
    "unpack",
    "security",
    "forensics",
    "binary-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Packaging",
]
# No runtime Python deps -- all extraction is via external binaries.
dependencies = []

[project.scripts]
re-unpacker = "re_unpacker.cli:main"

[project.urls]
# Fill in when the repo has a canonical home.
# Homepage = "https://example.invalid/re-unpacker"

[tool.setuptools.packages.find]
where = ["src"]
include = ["re_unpacker*"]
