# =============================================================================
# re-unpacker -- build system & project metadata
#
# Synopsis
#   PEP 517 / PEP 621 project definition. Enables `pip install -e .` from the
#   project root, which puts a `re-unpacker` entry-point script on PATH.
#
# Description
#   This project is Python-stdlib only -- no runtime dependencies. Extraction
#   is performed via external system binaries (dpkg-deb, 7z, cabextract, …)
#   which are out of scope for pip; see README.md for the `apt-get install`
#   one-liner.
#
# Notes
#   - Minimum Python: 3.10 (uses PEP 604 union types, frozenset type hints).
#   - The bundled bash wrapper `re-unpacker` remains available for people
#     who clone and run without installing.
#
# Execution parameters
#   # Editable install for development:
#   pip install -e .
#   # Regular install from a clone:
#   pip install .
#   # Build wheel / sdist:
#   python -m build
#
# Version
#   0.4.9
# =============================================================================

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "re-unpacker"
version = "0.4.9"
description = "Recursive package / installer / archive / binary extractor for RE triage"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "reverse-engineering",
    "extraction",
    "unpack",
    "security",
    "forensics",
    "binary-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Packaging",
]
# No runtime Python deps -- all extraction is via external binaries.
dependencies = []

[project.optional-dependencies]
# Development-only tooling. Install with: pip install -e ".[dev]"
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
re-unpacker = "re_unpacker.cli:main"

[project.urls]
Homepage = "https://github.com/Sandler73/RE-Unpacker"
Repository = "https://github.com/Sandler73/RE-Unpacker"
Documentation = "https://github.com/Sandler73/RE-Unpacker/wiki"
Changelog = "https://github.com/Sandler73/RE-Unpacker/blob/main/CHANGELOG.md"
Issues = "https://github.com/Sandler73/RE-Unpacker/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["re_unpacker*"]

# =============================================================================
# Development tool configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# Conservative default set: pyflakes (F), pycodestyle errors (E), warnings (W),
# isort (I), and bugbear (B). Kept modest so the lint gate is signal, not noise.
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]  # line length is handled by the formatter, not the linter

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src/re_unpacker"]
